# project_template

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile_base  LICENSE  README.md  main.cpp
.github/workflows/: docker-image.yml
